2005-08-02  Mark McLoughlin  <mark@skynet.ie>

	Based on patch from in Jaap A. Haitsma <jaap@haitsma.org>
	in bug #312143

	* simple-editor/GMenuSimpleEditor/maindialog.py:
	use gnome-main-menu as the window icon instead of
	non-existant gmenu-simple-editor
	
2005-08-02  Mark McLoughlin  <mark@skynet.ie>

	Allow running gmenu-simple-editor with a python
	from a different prefix. Fixes bug #312274

	* simple-editor/gmenu-simple-editor: remove
	
	* simple-editor/gmenu-simple-editor.in: if
	pyexecdir isn't in sys.path, insert it before
	trying to import main module.
	
	* simple-editor/Makefile.am: generate
	gmenu-simple-editor
	
	* simple-editor/GMenuSimpleEditor/main.py: 
	add a main() function.

2005-07-26  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.11.91

==================== 2.11.90 ====================

2005-07-26  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.11.90

2005-07-25  Mark McLoughlin  <mark@skynet.ie>

	Revert some of the changes related to handling different
	filename encodings.

	Basically, we shouldn't be trying to convert the desktop
	file ID to UTF-8 as that makes the matching process
	locale dependant.

	* libmenu/desktop-entries.c,
	  libmenu/entry-directories.[ch],
	  libmenu/gmenu-tree.c:  don't try to convert the path
	to UTF-8 in various places.

	* util/test-menu-spec.c: (print_entry): convert the 
	desktop file ID to UTF-8 before printing as well
	as the desktop file path.

2005-07-20  Mark McLoughlin  <mark@skynet.ie>

	* libmenu/menu-monitor.c: (free_event_info): plug
	a leak.

	* libmenu/entry-directories.c:
	(cached_dir_find_file_id),
	(entry_directory_get_desktop),
	(entry_directory_list_get_desktop): remove some unused code.
	It became unused when we switched to matching <Filename>s
	against a DesktopEntrySet of all the desktop entries.

2005-07-20  Mark McLoughlin  <mark@skynet.ie>

	Fix things up so that we correctly handle different
	filename encodings. Fixes bug #310939
