@@ -1,4 +1,5 @@
 Makefile
 Makefile.in
 gmenu-simple-editor
+gmenu-simple-editor.desktop
 *~
