@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+Type=Application
+_Name=Menu Editor
+Icon=gnome-main-menu
+Exec=gmenu-simple-editor
+StartupNotify=true
+NoDisplay=true
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=gnome-menus
+X-GNOME-Bugzilla-Component=general
